<resources>
    <string name="app_name">QUBES</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_edit">Edit</string>
    <string name="action_next">Next</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="nav_item_retail">Retail Outlets</string>
    <string name="nav_item_return">Return</string>
    <string name="nav_item_shipment">Shipment Cost</string>
    <string name="action_search_here">Search here</string>
    <string-array name="nav_drawer_labels">
        
        <item>@string/nav_item_retail</item>
        <item>@string/nav_item_return</item>
        <item>@string/nav_item_shipment</item>
    </string-array>
    <string name="title_home">Home</string>
    <string name="title_retail">Retail Outlets</string>
    <string name="title_return">Return</string>
    <string name="title_shipment">Shipment Cost</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="today_retail">Today`s Retail Outlet</string>
    <string name="title_activity_maps">Map</string>
    <string name="outlets">Outlets</string>
    <string name="delivery">Delivery</string>
    <string name="returns">Return</string>
    <string name="materialNo">Material No</string>
    <string name="materialDesc">Material Desc</string>
    <string name="uom">UOM</string>
    <string name="batch">Batch</string>
    <string name="qty">QTY</string>
    <string name="qtyReturn">Qty Return</string>
    <string name="reason">Reason</string>
    <string name="empty">Empty</string>
    <string name="check_out">Check Out</string>
    <string name="save">Save</string>
    <string name="success">Success</string>
    <string name="complete">Complete</string>
    <string name="check_all">Please check all material(s)!</string>
    <string name="check_data">You haven\'t checked material. Are you sure?</string>
    <string name="check_in_first">Please Check In First</string>
    <string name="check_in">Check In</string>
    <string name="ok">OK</string>
    <string name="check_out_first">Please check out before check in this outlet!</string>
    <string name="pass">Pass</string>
    <string name="incomplete">Incomplete</string>
    <string name="fill_reason">Please fill the reason!</string>
    <string name="save_alert">Please save for complete!</string>
    <string name="attachment">Attachment</string>
    <string name="returnActivity">Return</string>
    <string name="materialCode">Material Code</string>
    <string name="colon">:</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="make_sure">Are you sure?</string>
    <string name="category">Category</string>
    <string name="voucherno">Voucher No.</string>
    <string name="litre">Litre</string>
    <string name="amount">Amount</string>
    <string name="description">Description</string>
    <string name="createnewshipmentcost">Tap icon to create new shipment cost</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="date">Date</string>
    <string name="left">Left</string>
    <string name="idcategory">ZSB11</string>
    <string name="inputdatasuccess">Input data success</string>
    <string name="msg_error_category">Please choose category</string>
    <string name="msg_error_desc">Please input description</string>
    <string name="msg_error_amount">Please input valid amount</string>
    <string name="msg_error_voucher">Please input voucher number</string>
    <string name="msg_error_litre">Please input valid BBM litre</string>
    <string name="msg_error_attachment">Please choose attachment</string>
    <string name="inputActivity">Input Shipment Cost Activity</string>
    <string name="create_new_return">Tap icon to create new return</string>
    <string name="msg_error_material_code">Please input material code</string>
    <string name="msg_error_qty">Please input qty</string>
    <string name="msg_error_field">Please input the field</string>
    <string name="msg_error_field_customer">No Customer attached yet</string>
    <string name="msg_error_batch">Please input batch</string>
    <string name="update">Update</string>
    <string name="deliveryNumber">Delivery Number</string>
    <string name="msg_error_delivery_number">Please input delivery number</string>
    <string name="checkInFirst">Please check in first to see this content</string>
    <string name="shipmentCost">Shipment cost</string>
    <string name="createReturn">Create new return</string>
    <string name="add">Add</string>
    <string name="addNew">add new</string>
    <string name="menu">Menu</string>
    <string name="outlet_name">Outlet Name</string>
    <string name="outlet_address">Outlet Address</string>
    <string name="attach_here">Attach your photo here</string>
    <string name="materialno">Material No.</string>
    <string name="noTo">No. TO</string>
    <string name="paid">Paid</string>
    <string name="amountToPay">amount to pay</string>
    <string name="moneySettlement">Money Settlement</string>
    <string name="settlement">SETTLEMENT</string>
    <string name="itemsSettlement">Items Settlement</string>
    <string name="itemsPickUp">Items Pick Up</string>
    <string name="items_name">Items Name</string>
    <string name="today_delivery">today\'s delivery</string>
    <string name="timerVal">00:00</string>
    <string name="pauseButtonLabel">Pause</string>
    <string name="startButtonLabel">Start</string>
    <string name="userNumber">User number</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="forgetPassText">Enter your email to reset password</string>
    <string name="janjiBayar">Janji Bayar</string>
    <string name="invoice">INVOICE</string>
    <string name="order">Order</string>
    <string name="collection_settlement">Collection Settlement</string>
    <string name="items_settlement">Items Settlement</string>
    <string name="items_pickup">Items Pick Up</string>
    <string name="purchaseDate">Purchase Date</string>
    <string name="dueDate">Due Date</string>
    <string-array name="filterArray">
        <item>Object</item>
        <item>Customer</item>
        <item>Product</item>
    </string-array>
    <string name="deleteCompetitor"><u>Delete Competitor</u></string>
    <string name="MODIS">MOBILE DISTRIBUTION</string>
    <string name="toDateAchievement">To Date Achievement</string>
    <string name="monthToDate">Month to Date</string>
    <string name="target">Target</string>
    <string name="actl">Actl</string>
    <string name="bal">Bal.</string>
    <string name="toDay">To Day</string>
    <string name="prevGap">Prev GAP</string>
    <string name="totalTarget">Total Target</string>
    <string name="eal">Eal.</string>
    <string name="highOff">High. Off</string>
    <string name="collectPayment">Collect Payment</string>
    <string name="amountPaid">amount paid</string>
    <string name="materialName">Material Name</string>
    <string name="materialCode2">Material Code</string>
    <string name="desc">Description</string>
    <string name="addCompetitor">add competitor</string>
    <string name="addMaterial">add material</string>
    <string name="competitorName">competitor name</string>
    <string name="addReturn">add return</string>
    <string name="code">code</string>
    <string name="itemsName">items name</string>
    <string name="quantity">Quantity</string>
    <string name="quantityReturn">Quantity Return</string>
    <string name="areYouSure">Are you sure?</string>
    <string name="pleaseWriteYourReason">Please write your reason</string>
    <string name="pleaseSignHere">Please sign here</string>
    <string name="reset">Reset</string>
    <string name="leaveCommentHere">Leave your comment here</string>
    <string name="noBrb">No. BRB</string>
    <string name="noReturRep">No. RR</string>
    <string name="bacode">bacode</string>
    <string name="expiredDate">Expired Date</string>
    <string name="expired">Expired</string>
    <string name="changePwd">Change Password</string>
    <string name="logout">Logout</string>
    <string name="profomaInvoice">Profoma Invoice</string>
    <string name="collection">Collection</string>
    <string name="creditInfo">Credit Info</string>
    <string name="stockOpnameCapital">STORE CHECK</string>
    <string name="orderCapital">ORDER</string>
    <string name="returnCapital">RETURN</string>
    <string name="cancelCapital">CANCEL</string>
    <string name="backCapital">BACK</string>
    <string name="saveCapital">SAVE</string>
    <string name="submitCapital">SUBMIT</string>
    <string name="list">LIST</string>
    <string name="creditLimit">Credit Limit</string>
    <string name="creditAvailable">Credit Available</string>
    <string name="creditExposure">Credit Exposure</string>
    <string name="overdue">Overdue</string>
    <string name="tgl">Tgl</string>
    <string name="tJml">T. Jml</string>
    <string name="cnReturn">create new return</string>
    <string name="summaryReport">Summary Report</string>
    <string name="effectiveSummary">Effective Summary</string>
    <string name="orderStatus">Order Status</string>
    <string name="summary">Summary</string>
    <string name="monthly">Monthly</string>
    <string name="daily">Daily</string>
    <string name="salesOrder">Sales Order</string>
    <string name="totalSales">Total Sales</string>
    <string name="totalCall">Total Call</string>
    <string name="totalEa">Total EA</string>
    <string name="totalEc">Total EC</string>
    <string name="totalSp">Total SP</string>
    <string name="callPlan">Call Plan</string>
    <string name="totalRetur">Total Return</string>
    <string name="totalCp">Total CP</string>
    <string name="totalNoo">Total Noo</string>
    <string name="sisaTarget">Sisa Target</string>
    <string name="actual">Actual</string>
    <string name="oldPassword">Old Password</string>
    <string name="newPassword">New Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="next">NEXT</string>
    <string name="quantityOrd">Quantity</string>
    <string name="discT">Disc. T</string>
    <string name="priceBefore">Price Before</string>
    <string name="priceNett">Price Nett</string>
    <string name="orderPlan">Order Plan</string>
    <string name="orderPlanSummary">Order Plan Summary</string>
    <string name="kode">Kode</string>
    <string name="nama">Nama</string>
    <string name="kontak">Kontak</string>
    <string name="objects">Objects</string>
    <string name="act1">Act1</string>
    <string name="rp">Rp.</string>
    <string name="tglVisit">Tgl Visit</string>
    <string name="noVisit">No. Visit</string>
    <string name="orderSummary">Order Summary</string>
    <string name="viewDetails">View Details</string>
    <string name="hna">HNA</string>
    <string name="discTd">Disc. TD</string>
    <string name="totalDisc">Total Disc.</string>
    <string name="ppn">PPN</string>
    <string name="total">Total</string>
    <string name="totalItems">Total Items</string>
    <string name="totalOp">Total Order Plan</string>
    <string name="totalOrd">Total Item</string>
    <string name="noPo">No. PO</string>
    <string name="tglPo">Tgl. PO</string>
    <string name="edPo">ED PO</string>
    <string name="jenisJual">Jenis Jual</string>
    <string name="top">TOP</string>
    <string name="q1">Q1</string>
    <string name="q2">Q2</string>
    <string name="salesOrderhistory">Sales Order History</string>
    <string name="outlet">Outlet</string>
    <string name="klasifikasi">Klasifikasi</string>
    <string name="balancegap">Balance/GAP</string>
    <string name="home">Home</string>
    <string name="visit">Visit</string>
    <string name="profile">Profile</string>
    <string name="account">Account</string>
</resources>