<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:id="@+id/rr"
    android:padding="5dp">

    <LinearLayout
        android:id="@+id/l1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/outletValue"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/outlet"
            android:textSize="@dimen/superSmallFont" />


        <TextView
            android:id="@+id/dateValue"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/date"
            android:textSize="@dimen/superSmallFont" />

        <TextView
            android:id="@+id/amountValue"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/amount"
            android:textSize="@dimen/superSmallFont" />

        <TextView
            android:id="@+id/leftValue"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/left"
            android:textSize="@dimen/superSmallFont" />

        <ImageView
            android:id="@+id/attachmentValue"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="0.5"
            android:src="@drawable/ic_paid" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/l1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/darkGray" />
    </LinearLayout>

</RelativeLayout>