<?xml version='1.0' encoding='utf-8'?>
<androidx.cardview.widget.CardView xmlns:android='http://schemas.android.com/apk/res/android'
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="20dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="14dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="14dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:padding="15dp"
            android:src="@drawable/ic_close" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/addMaterial"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textSize="@dimen/mediumFont" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/materialName" />

        <AutoCompleteTextView
            android:id="@+id/materialName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/editbox"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:padding="10dp"
            android:textSize="@dimen/superSmallFont"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/materialCode2" />

        <AutoCompleteTextView
            android:id="@+id/materialCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/editbox"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:padding="10dp"
            android:textSize="@dimen/superSmallFont"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/klasifikasi" />

        <EditText
            android:id="@+id/klasifikasi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/editbox"
            android:enabled="false"
            android:inputType="text"
            android:layout_marginTop="8dp"
            android:padding="10dp"
            android:textSize="@dimen/superSmallFont"/>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button"
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_marginTop="25dp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:padding="12dp"
            app:cornerRadius="8dp"
            app:backgroundTint="@color/new_blue" />
    </LinearLayout>
</androidx.cardview.widget.CardView>