<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/rr">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:id="@+id/l1"
        android:padding="5dp">

        <TextView
            android:text="Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtTitle"
            android:layout_weight="25"
            android:textColor="@color/darkCyan"
            android:textSize="@dimen/smallFont"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="25"
            android:text="@string/target"
            android:textColor="@color/darkGray"
            android:textSize="@dimen/smallFont"
            android:id="@+id/txtTarget"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="25"
            android:text="@string/actual"
            android:textColor="@color/darkGray"
            android:textSize="@dimen/smallFont"
            android:id="@+id/txtActual"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="25"
            android:text="@string/balancegap"
            android:gravity="center"
            android:textColor="@color/darkGray"
            android:textSize="@dimen/smallFont"
            android:id="@+id/txtBalance"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="10dp"
        android:background="@color/darkGray"
        android:layout_below="@+id/l1"/>

</RelativeLayout>