<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_marginRight="50dp"
    android:layout_marginLeft="50dp"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="20dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp">
        <TableRow
            android:layout_height="match_parent"
            android:layout_width="match_parent">
            <TextView
                android:id="@+id/txtSummaryReport"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.5"
                android:text="@string/salesOrderhistory"
                android:layout_marginTop="15dp"
                android:textColor="@color/darkCyan"
                android:textSize="40dp" />
            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button"
                android:padding="12dp"
                app:cornerRadius="8dp"
                app:backgroundTint="@color/darkCyan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/btnEffectiveSummary"
                android:text="@string/effectiveSummary"
                android:textAllCaps="true"
                android:textColor="@color/white"
                />
            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button"
                android:padding="12dp"
                app:cornerRadius="8dp"
                app:backgroundTint="@color/darkCyan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:id="@+id/btnOrderStatus"
                android:layout_marginLeft="20dp"
                android:text="@string/orderStatus"
                android:textAllCaps="true"
                android:textColor="@color/white"
                />
        </TableRow>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="50dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/effectiveSummary"
            android:textSize="25sp"
            android:gravity="center"
            android:textColor="@color/darkCyan"
            android:id="@+id/txtEffectiveSummary"/>
        <TableRow
            android:id="@+id/firstRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="220dp"
            android:layout_below="@+id/txtEffectiveSummary"
            >
            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/totalCall"
                android:textSize="@dimen/smallFont"
                android:gravity="left"
                />

            <TextView
                android:id="@+id/totalCallValue"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="@dimen/smallFont"
                android:gravity="left"
                />
        </TableRow>
        <TableRow
            android:id="@+id/secondRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="220dp"
            android:layout_below="@+id/firstRow"
            >
            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/totalEc"
                android:textSize="@dimen/smallFont"
                android:gravity="left"
                />

            <TextView
                android:id="@+id/totalEcValue"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="@dimen/smallFont"
                android:gravity="left"
                />
        </TableRow>
        <TableRow
            android:id="@+id/thirdRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="220dp"
            android:layout_below="@+id/secondRow"
            >
            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/totalEa"
                android:textSize="@dimen/smallFont"
                android:gravity="left"
                />

            <TextView
                android:id="@+id/totalEaValue"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="@dimen/smallFont"
                android:gravity="left"
                />
        </TableRow>

        <TableRow
            android:id="@+id/fourthRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="220dp"
            android:layout_below="@+id/thirdRow"
            >
            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/totalSp"
                android:textSize="@dimen/smallFont"
                android:gravity="left"
                />

            <TextView
                android:id="@+id/totalSpValue"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="@dimen/smallFont"
                android:gravity="left"
                />
        </TableRow>
        <TableRow
            android:id="@+id/fifthRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="220dp"
            android:layout_below="@+id/fourthRow"
            >
            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/totalSales"
                android:textSize="@dimen/smallFont"
                android:gravity="left"
                />

            <TextView
                android:id="@+id/totalSalesValue"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="@dimen/smallFont"
                android:gravity="left"
                />
        </TableRow>


    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button"
            android:padding="12dp"
            app:cornerRadius="8dp"
            app:backgroundTint="@color/darkCyan"
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/backCapital"
            android:textColor="@color/white"
            />
    </RelativeLayout>
</LinearLayout>